# bps-salesforce-demo

./: .claudeignore  .forceignore  .gitignore  CLAUDE.md  LICENSE  README.md
agentforce2/: .env.example  .gitignore  pyproject.toml
agentforce2/agent/: loop.py
agentforce2/app/: gradio_app.py
agentforce2/config/: environment.yaml  user_profile.yaml
agentforce2/mcp_clients/: google_auth.py
agentforce2/mcp_servers/: google_mcp.py
agentforce2/prompts/: system_base.md
agentforce2/tests/: test_agent_driver.py  test_google_mcp_smoke.py
archive/lh360/: pyproject.toml
archive/lh360/agent/: loop.py  scenario.py
archive/lh360/app/api/: main.py  mcp_config.py  startup.py
archive/lh360/app/api/routes/: chat.py  health.py  profile.py
archive/lh360/app/web/: index.html  package-lock.json  package.json  vite.config.ts
archive/lh360/app/web/src/: App.tsx  index.css
archive/lh360/data/: gw_semantic_layer.yaml
archive/lh360/planner/: beta_catalog.py  llm.py  orchestrator.py  semantic_layer.py
archive/lh360/planner/prompts/: synthesis.md
archive/lh360/prompts/f_types/: t3_skeleton_design.md  t4_matching.md
archive/lh360/scripts/: build_beta_catalog.py  dev.sh  planner_batch.py
archive/lh360/tests/: inspect_sf_directory_args.py  test_agent_driver.py  test_atomic_dispatch.py  test_tool_call_retry.py
archive/lh360/tmp/planner_batch/20260419-222313/: system_prompt.md  tools.txt
archive/lh360/tmp/planner_batch/20260419-222342/: case_01.json  case_02.json  case_03.json  case_04.json  case_05.json  case_06.json  case_07.json  case_08.json  case_09.json  (+2 more)
(+1395 files in other folders)
